--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 .h5 filter=lfs diff=lfs merge=lfs -text
 DEMO.mp4 filter=lfs diff=lfs merge=lfs -text
+data/icml_face_data.csv filter=lfs diff=lfs merge=lfs -text
